--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "datetime-picker.js",
   "scripts": {
     "build:watch": "watch 'npm run build' ./lib",
-    "build:css": "sass lib/scss/picker.scss dist/css/datepicker.css",
+    "build:css": "sass lib/scss/main.scss dist/css/datepicker.css",
     "build:js": "browserify -d ./datetime-picker.js > dist/js/datepicker.standalone.js",
     "build": "mkdir -p dist/{js,css} && npm run build:css && npm run build:js",
     "clean": "rm -r dist/*",
